--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -7,7 +7,7 @@ import type { Hero as Props } from '~/types';
 const {
   title = await Astro.slots.render('title'),
   subtitle = await Astro.slots.render('subtitle'),
-  tagline,
+  tagline = await Astro.slots.render('tagline'),
 
   content = await Astro.slots.render('content'),
   actions = await Astro.slots.render('actions'),
@@ -18,7 +18,7 @@ const {
 } = Astro.props;
 ---
 
-<section class="relative md:-mt-[76px] not-prose" {...id ? { id } : {}}>
+<section class="relative hidden md:-mt-[76px] not-prose" {...id ? { id } : {}}>
   <div class="absolute inset-0 pointer-events-none" aria-hidden="true">
     <slot name="bg">
       {bg ? <Fragment set:html={bg} /> : null}
@@ -97,3 +97,138 @@ const {
     </div>
   </div>
 </section>
+
+<div class="relative isolate" {...id ? { id } : {}}>
+  <svg
+    class="absolute inset-x-0 top-0 -z-10 h-[64rem] w-full stroke-gray-200 [mask-image:radial-gradient(32rem_32rem_at_center,white,transparent)]"
+    aria-hidden="true"
+  >
+    <defs>
+      <pattern
+        id="1f932ae7-37de-4c0a-a8b0-a6e3b4d44b84"
+        width="200"
+        height="200"
+        x="50%"
+        y="-1"
+        patternUnits="userSpaceOnUse"
+      >
+        <path d="M.5 200V.5H200" fill="none"></path>
+      </pattern>
+    </defs>
+    <svg x="50%" y="-1" class="overflow-visible fill-gray-50">
+      <path
+        d="M-200 0h201v201h-201Z M600 0h201v201h-201Z M-400 600h201v201h-201Z M200 800h201v201h-201Z"
+        stroke-width="0"></path>
+    </svg>
+    <rect width="100%" height="100%" stroke-width="0" fill="url(#1f932ae7-37de-4c0a-a8b0-a6e3b4d44b84)"></rect>
+  </svg>
+  <div
+    class="absolute left-1/2 right-0 top-0 -z-10 -ml-24 transform-gpu overflow-hidden blur-3xl lg:ml-24 xl:ml-48 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+    aria-hidden="true"
+  >
+    <div
+      class="aspect-[801/1036] w-[50.0625rem] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30"
+      style="clip-path: polygon(63.1% 29.5%, 100% 17.1%, 76.6% 3%, 48.4% 0%, 44.6% 4.7%, 54.5% 25.3%, 59.8% 49%, 55.2% 57.8%, 44.4% 57.2%, 27.8% 47.9%, 35.1% 81.5%, 0% 97.7%, 39.2% 100%, 35.2% 81.4%, 97.2% 52.8%, 63.1% 29.5%)"
+    >
+    </div>
+  </div>
+  <div class="overflow-hidden">
+    <div class="mx-auto max-w-7xl px-6 pb-32 pt-36 sm:pt-60 lg:px-8 lg:pt-32">
+      <div class="mx-auto max-w-2xl gap-x-48 lg:mx-0 lg:flex lg:max-w-none lg:items-center">
+        <div class="w-full max-w-xl lg:shrink-0 xl:max-w-2xl">
+          {
+            title && (
+              <h1
+                class="text-2xl font-bold text-[#5BB4CC] text-pretty sm:text-5xl intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+                set:html={title}
+              />
+            )
+          }
+          {
+            tagline && (
+              <p
+                class="text-5xl mt-2 text-[#517994] text-pretty font-bold intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+                set:html={tagline}
+              />
+            )
+          }
+          {
+            subtitle && (
+              <p
+                class="relative mt-6 text-md text-[#517994] text-pretty sm:max-w-md lg:max-w-none intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+                set:html={subtitle}
+              />
+            )
+          }
+          <div class="mt-10 flex items-center gap-x-6">
+            {
+              actions && (
+                <div class="max-w-xs sm:max-w-md flex flex-nowrap flex-col sm:flex-row sm:justify-center gap-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
+                  {Array.isArray(actions) ? (
+                    actions.map((action) => (
+                      <div class="flex w-full sm:w-auto">
+                        <Button {...(action || {})} class="w-full sm:mb-0" />
+                      </div>
+                    ))
+                  ) : (
+                    <Fragment set:html={actions} />
+                  )}
+                </div>
+              )
+            }
+          </div>
+        </div>
+        <div class="mt-14 flex justify-end gap-8 sm:-mt-44 sm:justify-start sm:pl-20 lg:mt-0 lg:pl-0">
+          <div
+            class="ml-auto w-44 flex-none space-y-8 pt-32 sm:ml-0 sm:pt-80 lg:order-last lg:pt-36 xl:order-none xl:pt-80"
+          >
+            <div class="relative">
+              <img
+                src="https://plus.unsplash.com/premium_photo-1664013263421-91e3a8101259?w=220&h=330&fit=crop"
+                alt=""
+                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg"
+              />
+              <div class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10"></div>
+            </div>
+          </div>
+          <div class="mr-auto w-44 flex-none space-y-8 sm:mr-0 sm:pt-52 lg:pt-36">
+            <div class="relative">
+              <img
+                src="https://images.unsplash.com/photo-1663791474939-fcf3c0219787?w=220&h=330&fit=crop"
+                alt=""
+                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg"
+              />
+              <div class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10"></div>
+            </div>
+            <div class="relative">
+              <img
+                src="https://images.unsplash.com/photo-1602028286725-a4aad1b5d3d9?w=220&h=330&fit=crop"
+                alt=""
+                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg"
+              />
+              <div class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10"></div>
+            </div>
+          </div>
+          <div class="w-44 flex-none space-y-8 pt-32 sm:pt-0">
+            <div class="relative">
+              <img
+                src="https://images.unsplash.com/photo-1520420097861-e4959843b682?w=220&h=330&fit=crop"
+                alt=""
+                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg"
+              />
+              <div class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10"></div>
+            </div>
+            <div class="relative">
+              <img
+                src="https://images.unsplash.com/photo-1574888347495-a0286e21a850?w=220&h=330&fit=crop"
+                alt=""
+                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg"
+              />
+              <div class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
