hero mobile font size

--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -147,7 +147,7 @@ const {
           {
             tagline && (
               <p
-                class="text-5xl mt-2 text-[#517994] text-pretty font-bold intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+                class="text-2xl lg:text-5xl mt-2 text-[#517994] text-pretty font-bold intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
                 set:html={tagline}
               />
             )
