display subtitle mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const metadata = {
     <Fragment slot="tagline"> Oil painting specialist in nature and birds </Fragment>
 
     <Fragment slot="subtitle">
-      <span class="hidden sm:inline">
+      <span class="">
         <span class="font-semibold">Alex's</span> passion for painting and birds has led to works that explore the connection
         between nature and humanity, blending the earthly with the spiritual. Living in New Zealand, an island of breathtaking
         landscapes and rich Māori heritage, has deeply influenced her art. Her pieces, ranging from realistic to surrealistic,
