--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -133,7 +133,7 @@ const {
     </div>
   </div>
   <div class="overflow-hidden">
-    <div class="mx-auto max-w-7xl px-6 pb-32 pt-36 sm:pt-60 lg:px-8 lg:pt-32">
+    <div class="mx-auto max-w-7xl px-6 pb-32 pt-16 sm:pt-60 lg:px-8 lg:pt-32">
       <div class="mx-auto max-w-2xl gap-x-48 lg:mx-0 lg:flex lg:max-w-none lg:items-center">
         <div class="w-full max-w-xl lg:shrink-0 xl:max-w-2xl">
           {
@@ -147,7 +147,7 @@ const {
           {
             tagline && (
               <p
-                class="text-2xl lg:text-5xl mt-2 text-[#517994] text-pretty font-bold intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+                class="text-2xl lg:text-5xl mt-2 text-[#3a3c3d] text-pretty font-bold intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
                 set:html={tagline}
               />
             )
