--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Hero from '~/components/widgets/Hero.astro';
 // import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'Alejandra Perez Curti - Oil painting specialist in nature and birds',
   ignoreTitleTemplate: true,
 };
 ---
