--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -147,7 +147,7 @@ const {
           {
             tagline && (
               <p
-                class="text-2xl lg:text-5xl mt-2 text-[#3a3c3d] text-pretty font-bold intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+                class="text-2xl lg:text-5xl mt-2 text-[#517994] text-pretty font-bold intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
                 set:html={tagline}
               />
             )
@@ -163,7 +163,7 @@ const {
           <div class="mt-10 flex items-center gap-x-6">
             {
               actions && (
-                <div class="max-w-xs sm:max-w-md flex flex-nowrap flex-col sm:flex-row sm:justify-center gap-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
+                <div class="max-w-xs sm:max-w-md flex flex-nowrap flex-row sm:justify-center gap-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
                   {Array.isArray(actions) ? (
                     actions.map((action) => (
                       <div class="flex w-full sm:w-auto">
