--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -16,6 +16,13 @@ const {
   id,
   bg = await Astro.slots.render('bg'),
 } = Astro.props;
+
+const paintImg = '~/assets/images/paint_gray.png';
+// Hero images
+// const heroImg1 = '~/assets/images/paint_gray.png';
+// const heroImg2 = '~/assets/images/paint_gray.png';
+// const heroImg3 = '~/assets/images/paint_gray.png';
+// const heroImg4 = '~/assets/images/paint_gray.png';
 ---
 
 <section class="relative hidden md:-mt-[76px] not-prose" {...id ? { id } : {}}>
@@ -99,42 +106,37 @@ const {
 </section>
 
 <div class="relative isolate" {...id ? { id } : {}}>
-  <svg
-    class="absolute inset-x-0 top-0 -z-10 h-[64rem] w-full stroke-gray-200 [mask-image:radial-gradient(32rem_32rem_at_center,white,transparent)]"
-    aria-hidden="true"
-  >
-    <defs>
-      <pattern
-        id="1f932ae7-37de-4c0a-a8b0-a6e3b4d44b84"
-        width="200"
-        height="200"
-        x="50%"
-        y="-1"
-        patternUnits="userSpaceOnUse"
-      >
-        <path d="M.5 200V.5H200" fill="none"></path>
-      </pattern>
-    </defs>
-    <svg x="50%" y="-1" class="overflow-visible fill-gray-50">
-      <path
-        d="M-200 0h201v201h-201Z M600 0h201v201h-201Z M-400 600h201v201h-201Z M200 800h201v201h-201Z"
-        stroke-width="0"></path>
-    </svg>
-    <rect width="100%" height="100%" stroke-width="0" fill="url(#1f932ae7-37de-4c0a-a8b0-a6e3b4d44b84)"></rect>
-  </svg>
+  <Image
+    src={paintImg}
+    alt="Oil paint"
+    width={500}
+    class="blue-img select-none opacity-20 max-lg:hidden absolute left-[55%] top-[20%] right-0"
+  />
+  <Image
+    src={paintImg}
+    alt="Oil paint"
+    width={400}
+    class="blue-img select-none opacity-20 absolute max-lg:hidden right-[15%] top-1/2"
+  />
+  <Image
+    src={paintImg}
+    alt="Oil paint"
+    width={400}
+    class="blue-img select-none opacity-20 absolute max-lg:hidden right-[10%] top-[10%]"
+  />
   <div
-    class="absolute left-1/2 right-0 top-0 -z-10 -ml-24 transform-gpu overflow-hidden blur-3xl lg:ml-24 xl:ml-48 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+    class="absolute left-1/2 blur-3xl right-0 top-0 -z-10 -ml-24 transform-gpu overflow-hidden lg:ml-24 xl:ml-48 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
     aria-hidden="true"
   >
     <div
-      class="aspect-[801/1036] w-[50.0625rem] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30"
+      class="aspect-[801/1036] w-[50.0625rem] bg-gradient-to-tr from-[#5BB4CC] to-[#517994] opacity-30"
       style="clip-path: polygon(63.1% 29.5%, 100% 17.1%, 76.6% 3%, 48.4% 0%, 44.6% 4.7%, 54.5% 25.3%, 59.8% 49%, 55.2% 57.8%, 44.4% 57.2%, 27.8% 47.9%, 35.1% 81.5%, 0% 97.7%, 39.2% 100%, 35.2% 81.4%, 97.2% 52.8%, 63.1% 29.5%)"
     >
     </div>
   </div>
   <div class="overflow-hidden">
-    <div class="mx-auto max-w-7xl px-6 pb-32 pt-16 sm:pt-60 lg:px-8 lg:pt-32">
-      <div class="mx-auto max-w-2xl gap-x-48 lg:mx-0 lg:flex lg:max-w-none lg:items-center">
+    <div class="mx-auto max-w-7xl px-6 pb-32 pt-8 sm:pt-60 lg:px-8 lg:pt-16">
+      <div class="mx-auto max-w-2xl gap-x-16 lg:mx-0 lg:flex lg:max-w-none lg:items-center">
         <div class="w-full max-w-xl lg:shrink-0 xl:max-w-2xl">
           {
             title && (
@@ -232,3 +234,37 @@ const {
     </div>
   </div>
 </div>
+
+<style>
+  .blue-img {
+    filter: brightness(50%) saturate(100%) invert(89%) sepia(98%) saturate(406%) hue-rotate(130deg) brightness(103%)
+      contrast(71%);
+    /* animation: float 6s ease-in-out infinite;   */
+    animation: float linear forwards;
+    animation-timeline: scroll();
+    animation-range: 0vh 90vh;
+  }
+  /* Añadimos un delay dinámico dependiendo del orden */
+  .blue-img:nth-of-type(1) {
+    animation-delay: 0s; /* Primer elemento */
+  }
+
+  .blue-img:nth-of-type(2) {
+    animation-delay: 0.5s; /* Segundo elemento */
+  }
+
+  .blue-img:nth-of-type(3) {
+    animation-delay: 1s; /* Tercer elemento */
+  }
+  @keyframes float {
+    0% {
+      transform: translatey(0px);
+    }
+    50% {
+      transform: translatey(-40px);
+    }
+    100% {
+      transform: translatey(0px);
+    }
+  }
+</style>
