--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -26,7 +26,7 @@ import '@fontsource-variable/inter';
     --aw-font-heading: 'Inter Variable';
 
     --aw-color-primary: rgb(243 127 95);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-secondary: rgb(91 180 204);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(0 0 0);
@@ -37,7 +37,7 @@ import '@fontsource-variable/inter';
     --aw-color-bg-page-dark: rgb(3 6 32);
 
     ::selection {
-      background-color: lavender;
+      background-color: rgb(146 213 232);
     }
   }
 
